--- a/index.html
+++ b/index.html
@@ -2,207 +2,169 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Victor Ogbeide - Designer Portfolio</title>
-  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;500;700&display=swap" rel="stylesheet">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Victor Ogbeide | Portfolio</title>
   <style>
+    /* RESET & BASE */
     * {
       margin: 0;
       padding: 0;
       box-sizing: border-box;
-      font-family: 'Poppins', sans-serif;
       scroll-behavior: smooth;
     }
 
     body {
-      background-color: #0d0d0d;
-      color: #f5f5f5;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      padding: 2rem;
-      position: relative;
+      font-family: 'Poppins', sans-serif;
+      background-color: #0f0f0f;
+      color: #f9f9f9;
       overflow-x: hidden;
+      position: relative;
     }
 
-    canvas#bg {
-      position: fixed;
-      top: 0;
-      left: 0;
-      width: 100vw;
-      height: 100vh;
-      z-index: -1;
-      opacity: 0.1;
-    }
-
-    .fade-in {
-      animation: fadeIn 1.4s ease forwards;
-    }
-
-    @keyframes fadeIn {
-      0% {
-        opacity: 0;
-        transform: translateY(20px);
-      }
-      100% {
-        opacity: 1;
-        transform: translateY(0);
-      }
-    }
-
-    .profile-img {
-      width: 160px;
-      height: 160px;
-      border-radius: 50%;
-      border: 3px solid #f1c40f;
-      object-fit: cover;
-      margin-bottom: 1rem;
-    }
-
-    h1 {
-      color: #f1c40f;
-      font-size: 2rem;
-      margin-bottom: 0.5rem;
-    }
-
-    h2 {
-      font-weight: 300;
-      margin-bottom: 2rem;
-      color: #aaa;
-    }
-
-    .about {
-      max-width: 600px;
-      text-align: center;
-      margin-bottom: 2rem;
-      line-height: 1.6;
-    }
-
-    .links {
-      display: flex;
-      flex-wrap: wrap;
-      justify-content: center;
-      gap: 1rem;
-      margin-bottom: 2rem;
-    }
-
-    .link-btn {
-      background-color: #1a1a1a;
-      color: #f1c40f;
-      border: 2px solid #f1c40f;
-      padding: 0.75rem 1.5rem;
+    a {
+      color: #FFD700;
       text-decoration: none;
-      border-radius: 10px;
       transition: all 0.3s ease;
     }
 
-    .link-btn:hover {
-      background-color: #f1c40f;
-      color: #0d0d0d;
+    a:hover {
+      text-decoration: underline;
+    }
+
+    header {
+      padding: 4rem 1rem 2rem;
+      text-align: center;
+      position: relative;
+      z-index: 10;
+    }
+
+    header img.profile-img {
+      width: 140px;
+      height: 140px;
+      border-radius: 50%;
+      object-fit: cover;
+      border: 3px solid #FFD700;
+      margin-bottom: 1rem;
+    }
+
+    header h1 {
+      font-size: 2.5rem;
+      margin-bottom: 0.5rem;
+    }
+
+    header p {
+      font-size: 1.1rem;
+      color: #bbb;
+    }
+
+    section {
+      padding: 2rem 1rem;
+      max-width: 800px;
+      margin: 0 auto;
+      position: relative;
+      z-index: 10;
+    }
+
+    .socials {
+      display: flex;
+      justify-content: center;
+      flex-wrap: wrap;
+      gap: 1rem;
+      margin-top: 2rem;
+    }
+
+    .socials a {
+      background-color: #1a1a1a;
+      padding: 0.8rem 1.2rem;
+      border-radius: 30px;
+      font-size: 1rem;
     }
 
     footer {
-      font-size: 0.9rem;
-      color: #888;
-      margin-top: 2rem;
+      text-align: center;
+      padding: 2rem 1rem;
+      color: #999;
+    }
+
+    /* BACKGROUND ANIMATION */
+    .polygons {
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      overflow: hidden;
+      z-index: 1;
+    }
+
+    .polygon {
+      position: absolute;
+      width: 100px;
+      height: 100px;
+      background-color: rgba(255, 215, 0, 0.05);
+      clip-path: polygon(50% 0%, 100% 38%, 82% 100%, 18% 100%, 0% 38%);
+      animation: float 20s infinite linear;
+    }
+
+    @keyframes float {
+      0% {
+        transform: translateY(100vh) rotate(0deg);
+      }
+      100% {
+        transform: translateY(-100vh) rotate(360deg);
+      }
     }
   </style>
 </head>
-<body class="fade-in">
-
-  <!-- 🔷 Moving Background Canvas -->
-  <canvas id="bg"></canvas>
-
-  <!-- 👤 Profile & Intro -->
-  <img src="https://drive.google.com/uc?export=view&id=1X1yH281CfiGKF0O_vA_ynjFdleCasddl" alt="Victor's Profile" class="profile-img">
-
-  <h1>Victor Ogbeide</h1>
-  <h2>Designer Extraordinaire 💻🎨</h2>
-
-  <div class="about">
-    <p>
-      Welcome to my corner of the web! I'm Victor, a passionate designer who crafts visual experiences that speak louder than words. From branding to UI/UX and digital storytelling, I bring ideas to life with precision and creativity.
-    </p>
-    <br>
-    <p>
-      Whether it's social media graphics, motion designs, or sleek interface layouts — I'm your go-to guy to make your brand shine with meaning and beauty.
-    </p>
+<body>
+  <!-- BACKGROUND POLYGONS -->
+  <div class="polygons">
+    <div class="polygon" style="left: 10%; animation-delay: 0s;"></div>
+    <div class="polygon" style="left: 30%; animation-delay: 4s;"></div>
+    <div class="polygon" style="left: 50%; animation-delay: 8s;"></div>
+    <div class="polygon" style="left: 70%; animation-delay: 2s;"></div>
+    <div class="polygon" style="left: 90%; animation-delay: 6s;"></div>
   </div>
 
-  <!-- 🔗 Social Links -->
-  <div class="links">
-    <a href="https://x.com/dvictorogbeide?t=LVvsbkBy6Q5hbxuhSYluQQ&s=09" class="link-btn" target="_blank">Twitter</a>
-    <a href="https://www.instagram.com/thevictorogbeide?igsh=b2poNnI0bWk4dHRt" class="link-btn" target="_blank">Instagram</a>
-    <a href="https://www.facebook.com/profile.php?id=61574839274988&mibextid=ZbWKwL" class="link-btn" target="_blank">Facebook</a>
-    <a href="https://wa.me/message/7U4T2N47JMNOL1" class="link-btn" target="_blank">WhatsApp</a>
-    <a href="mailto:thevictorogbeide@gmail.com" class="link-btn">Email Me</a>
-  </div>
+  <!-- HEADER SECTION -->
+  <header>
+    <img src="https://drive.google.com/uc?export=view&id=1X1yH281CfiGKF0O_vA_ynjFdleCasddl" alt="Victor's Profile" class="profile-img" />
+    <h1>Victor Ogbeide</h1>
+    <p>Creative Designer | Visual Storyteller | Branding Expert</p>
+  </header>
 
+  <!-- WELCOME SECTION -->
+  <section>
+    <h2>Welcome 👋🏾</h2>
+    <p>
+      I’m Victor — a passionate and skilled designer helping brands tell bold visual stories that connect, inspire, and convert. Whether you're looking for flyers, logos, brand identity or engaging motion content, I bring your vision to life with precision and creativity.
+    </p>
+    <br />
+    <h3>What I Do</h3>
+    <ul>
+      <li>🎨 Brand Identity Design</li>
+      <li>📱 Social Media Visuals</li>
+      <li>🎞 Motion Graphics</li>
+      <li>🧠 Creative Strategy & Design Thinking</li>
+    </ul>
+  </section>
+
+  <!-- SOCIALS SECTION -->
+  <section>
+    <h2>Let's Connect</h2>
+    <div class="socials">
+      <a href="https://x.com/dvictorogbeide?t=LVvsbkBy6Q5hbxuhSYluQQ&s=09" target="_blank">X (Twitter)</a>
+      <a href="https://www.instagram.com/thevictorogbeide?igsh=b2poNnI0bWk4dHRt" target="_blank">Instagram</a>
+      <a href="https://www.facebook.com/profile.php?id=61574839274988&mibextid=ZbWKwL" target="_blank">Facebook</a>
+      <a href="https://wa.me/message/7U4T2N47JMNOL1" target="_blank">WhatsApp</a>
+      <a href="mailto:thevictorogbeide@gmail.com" target="_blank">Email Me</a>
+      <a href="#" target="_blank">Behance (Coming Soon)</a>
+    </div>
+  </section>
+
+  <!-- FOOTER -->
   <footer>
     &copy; 2025 Victor Ogbeide. All rights reserved.
   </footer>
-
-  <!-- 🎯 JavaScript for Polygon Animation -->
-  <script>
-    const canvas = document.getElementById("bg");
-    const ctx = canvas.getContext("2d");
-
-    function resizeCanvas() {
-      canvas.width = window.innerWidth;
-      canvas.height = window.innerHeight;
-    }
-
-    window.addEventListener("resize", resizeCanvas);
-    resizeCanvas();
-
-    class Polygon {
-      constructor() {
-        this.reset();
-      }
-
-      reset() {
-        this.x = Math.random() * canvas.width;
-        this.y = Math.random() * canvas.height;
-        this.size = Math.random() * 40 + 20;
-        this.speed = Math.random() * 0.5 + 0.2;
-        this.sides = Math.floor(Math.random() * 3 + 3); // triangle to pentagon
-        this.angle = Math.random() * Math.PI * 2;
-      }
-
-      draw() {
-        ctx.beginPath();
-        for (let i = 0; i < this.sides; i++) {
-          let theta = this.angle + (i * 2 * Math.PI) / this.sides;
-          let x = this.x + this.size * Math.cos(theta);
-          let y = this.y + this.size * Math.sin(theta);
-          if (i === 0) ctx.moveTo(x, y);
-          else ctx.lineTo(x, y);
-        }
-        ctx.closePath();
-        ctx.strokeStyle = "rgba(255, 215, 0, 0.2)";
-        ctx.lineWidth = 1;
-        ctx.stroke();
-      }
-
-      update() {
-        this.y -= this.speed;
-        if (this.y + this.size < 0) this.reset();
-        this.draw();
-      }
-    }
-
-    const polygons = [];
-    for (let i = 0; i < 25; i++) {
-      polygons.push(new Polygon());
-    }
-
-    function animate() {
-      ctx.clearRect(0, 0, canvas.width, canvas.height);
-      polygons.forEach(p => p.update());
-      requestAnimationFrame(animate);
-    }
-
-    animate();
-  </script>
 </body>
 </html>
